# gegensprech

./: .gitignore  Cargo.toml  README.md  armv7h.sh  default.nix  flake.nix
.github/workflows/: ci.yaml
blinky/: Cargo.toml  blinky.rs  default.nix
prototyp/: README.md  gegensprech0w2.csg  gegensprech3b.csg  ras3b.csg
src/: audio.rs  button.rs  cmd.rs  main.rs  misc.rs  mtx.rs  status.rs
src/audio/: cmd.rs  pulse.rs
