[package]
name = "gegensprech"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
url = { version = "2.2", features = ["serde"] }
serde_json = "1.0"
directories = "3.0"
tokio = { version = "1.8", default-features = false, features = ["rt-multi-thread", "macros"] }
structopt = "0.3"
atty = "0.2"
anyhow = "1.0.41"
clap = "3.0.0-beta.4"
lazy_static = "1.4.0"
tracing = "0.1.26"
tracing-subscriber = "0.2.18"
rpassword = "5.0.1"
gethostname = "0.2.1"
futures = "0.3.15"
rppal = "0.12.0"
matrix-sdk = { version = "0.4.1", features = ["rustls-tls", "markdown"], default-features = false }
