[package]
name = "gegensprech"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
url = { version = "2.2", features = ["serde"] }
serde_json = "1.0"
directories = "3.0"
tokio = { version = "1.8", default-features = false, features = ["rt-multi-thread", "macros", "signal"] }
structopt = "0.3"
atty = "0.2"
anyhow = "1.0.41"
clap = { version = "3.0.14", features = ["derive"] }
tracing = "0.1.26"
tracing-subscriber = "0.2.18"
rpassword = "5.0.1"
gethostname = "0.2.1"
futures = "0.3.15"
rppal = { version = "0.13.1", features = ["embedded-hal", "hal"] }
matrix-sdk = { version = "0.4.1", features = ["markdown"], default-features = false }
libpulse-simple-binding = { version = "2.25.0", optional = true }
libpulse-binding = { version = "2.26.0", optional = true }
ogg-opus = { version = "0.1.2" }
itertools = "0.10.3"
apa102-spi = "0.3.2"
smart-leds-trait = "0.2.1"
signal-child = "1.0.5"
once_cell = "1.10.0"
regex = "1.5.5"
serde_yaml = "0.8.23"
structstruck = "0.1.1"


[features]
audio-as-lib = ["libpulse-binding", "libpulse-simple-binding"]
default = ["matrix-sdk/rustls-tls"]
native-tls = ["matrix-sdk/native-tls"]

[patch.crates-io]
#audiopus = { version = "0.3.0-rc.0" } # be nice if this worked.. :/
ogg-opus = { git = "https://github.com/jcaesar/ogg-opus" }
