[package]
name = "twomic-led-blinky"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "blinky"
path = "blinky.rs"

[dependencies]
apa102-spi = "0.4.0"
rppal = { version = "0.19.0", features = ["hal", "embedded-hal"] }
signal-handler = { version = "0.2.2", default-features = false }
signal-hook = "0.3.17"
smart-leds-trait = "0.3.0"
